change columns for cards results with current set only